<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LendList</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LendList</string>
    <string name="borrowed">Theirs</string>
    <string name="lent">Mine</string>
    <string name="add">Add</string>
    <string name="loading">Loading…</string>
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_text_ijust">I just</string>
    <string name="add_text_borrowed">borrowed</string>
    <string name="add_text_lent">lent</string>
    <string name="add_text_something">something</string>
    <string name="add_text_to">TO</string>
    <string name="add_text_from">FROM</string>
    <string name="add_text_someone">someone</string>
    <string name="add_text_until">UNTIL</string>
    <string name="edit_text_borrowed">borrowed from</string>
    <string name="edit_text_lent">lent to</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="add_until_hint">Set date (optional)</string>
    <string name="since">since %s</string>
    <string name="until">until %s</string>
    <string name="delete">Delete</string>
    <string name="title_activity_details">Details</string>
    <string name="person_heading">PERSON</string>
    <string name="person">Person</string>
    <string name="date">Date</string>
    <string name="date_return">Return date</string>
    <string name="date_start">Date of lending</string>
    <string name="date_heading">PERIOD</string>
    <string name="edit_returned">Returned</string>
    <string name="edit_not_returned">Returned</string>
    <string name="error_head">Oooops!</string>
    <string name="error_unkown_item">This item does not exist.</string>
    <string name="persons">Persons</string>
    <string name="delete_confirm">Do you really want to delete this?</string>
    <string name="delete_success">Deleted.</string>
    <string name="save_success">Saved.</string>
    <string name="add_success">Item created.</string>
    <string name="person_choosecontacts">Choose from contacts</string>
    <string name="person_entertext">Enter a name</string>
    <string name="person_method">Edit person</string>
    <string name="title_activity_person_lookup">Person</string>
    <string name="returned_hide">Hide returned</string>
    <string name="returned_show">Show returned</string>
    <string name="about">About</string>
    <string name="order">Order</string>
    <string name="order_promot">Sort things</string>
    <string name="order_alphabetical">Alphabetical</string>
    <string name="order_date">Creation</string>
    <string name="order_return">Return</string>
    <string name="order_person">Person name</string>
    <string name="date_days_left">%d days left</string>
    <string name="date_days_left_1">1 day left</string>
    <string name="date_days_left_0">until today</string>
    <string name="date_days_over">%d days overdue</string>
    <string name="date_days_over_1">1 day overdue</string>
    <string name="itemlist_returned">returned</string>
    <string name="itemlist_dir_borrowed">theirs</string>
    <string name="itemlist_dir_lent">mine</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="calendar_return">Return %1$s to %2$s</string>
    <string name="error_no_return_date">No return date specified</string>
    <string name="export">Export</string>
    <string name="export_sd_btn">Export to SD card</string>
    <string name="export_sd_text">If you click the button below a backup file of your items will be written to your device\'s external storage in a directory called LendList/</string>
    <string name="import_sd_btn">Import (choose file)</string>
    <string name="import_sd_text">Using this function you can import one of the backup files you created into the application to restore your data. Attention: Make a new backup first, because any changes newer than the backup you are going to restore will be LOST!</string>
    <string name="export_success">Export was successful.</string>
    <string name="export_failed">Export failed.</string>
    <string name="export_failed_sd">Export failed. The storage (SD card) is not writable!</string>
    <string name="import_success">Import was successful.</string>
    <string name="import_failed">Import failed.</string>
    <string name="import_confirm">Really overwrite current data with backup?</string>
    <string name="import_choose">Choose file</string>
    <string name="photo_heading">PHOTOS</string>
    <string name="photo_choose">Choose from photos</string>
    <string name="photo_take">Take photo</string>
    <string name="photo_share">Share photo</string>
    <string name="photo_delete">Delete photo</string>
    <string name="photo_delete_confirm">Really delete this photo?</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notification_switch">Notify when item is due</string>
    <string name="notify_days">Notify X days before due date</string>
    <string name="notify_vibrate">Vibrate</string>
    <string name="notify_ringtone">Sound</string>

    <plurals name="notification_text">
        <item quantity="one">You have to return an item soon.</item>
        <item quantity="other">You have to return %d items soon.</item>
    </plurals>

    <string name="categories">Categories</string>
    <string name="category_default_0">Books</string>
    <string name="category_default_1">DVDs</string>
    <string name="category_default_2">Money</string>
    <string name="add_category">Add category</string>
    <string name="title_activity_category_lookup">Category</string>
    <string name="itemlist_dir_lent_to">to %s</string>
    <string name="itemlist_dir_borrowed_from">from %s</string>
    <string name="category_rename">Rename category</string>
    <string name="category_delete">Remove category</string>
    <string name="category_delete_confirm">Do you really want to delete this category?</string>
    <string name="category_delete_success">Deleted.</string>

</resources>