<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="9"
        app:showAsAction="never"
        android:title="@string/order"></item>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_collection"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/returned_show"></item>
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="90"
        app:showAsAction="never"
        android:title="@string/export"></item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"></item>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/about" />

</menu>