<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_action_event"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/add_to_calendar" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/cancel" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/accept"></item>

</menu>