<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svOuter"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvSdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_sd_text" />

        <Button
            android:id="@+id/btExportSd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_sd_btn" />

        <TextView
            android:id="@+id/tvSdImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/import_sd_text" />

        <Button
            android:id="@+id/btImportSd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_sd_btn" />
    </LinearLayout>

</ScrollView>