<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/etThing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_text_something"
            android:textStyle="bold" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="60dp" >

            <TextView
                android:id="@+id/tvBorrowed"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dirsel_borrowed_highlighted"
                android:gravity="center"
                android:text="@string/add_text_borrowed"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dirsel_borrowed_highlighted" />

            <TextView
                android:id="@+id/tvLent"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dirsel_lent_inactive"
                android:gravity="center"
                android:text="@string/add_text_lent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dirsel_lent_inactive" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:drawableBottom="@drawable/section_header"
            android:drawablePadding="4dp"
            android:paddingLeft="4dp"
            android:text="@string/add_text_from"
            android:textAllCaps="true"
            android:textColor="@color/emphasis"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etPerson"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/add_text_someone"
                android:inputType="textPersonName"
                android:singleLine="true" >
            </EditText>

            <ImageButton
                android:id="@+id/ibContact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_contact" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvUntil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:drawableBottom="@drawable/section_header"
            android:drawablePadding="4dp"
            android:paddingLeft="4dp"
            android:text="@string/add_text_until"
            android:textAllCaps="true"
            android:textColor="@color/emphasis"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etUntil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:hint="@string/add_until_hint"
            android:inputType="none"
            android:singleLine="true" />
    </LinearLayout>

</ScrollView>